src/pages/Home/Home.module.css
.container {
  display: flex;
  flex-direction: column;
  padding: 16px;
  text-align: center;
}

.container h1,
p {
  align-self: center;
}

.container p {
  font-size: 16px;
}

.cards-container {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
}

.card {
  margin: 10px;
  width: 250px;
  min-height: 250px;
  padding: 10px;
}

.card img {
  width: 250px;
  height: auto;
}

.card label {
  text-decoration: none !important;
  padding: 8px;
}

@media only screen and (max-width: 768px) {
  .cards-container {
    flex-direction: column;
    gap: 32px;
  }

  .card {
    margin: 0;
    width: 100%;
    padding: 0;
    height: auto;
  }
}

